Added some markdown to divide sections

--- a/model.ipynb
+++ b/model.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loading Libraries and Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +28,242 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exploratory Data Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Desc</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>BodyPart</th>\n",
+       "      <th>Equipment</th>\n",
+       "      <th>Level</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>RatingDesc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Partner plank band row</td>\n",
+       "      <td>The partner plank band row is an abdominal exe...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Abdominals</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Banded crunch isometric hold</td>\n",
+       "      <td>The banded crunch isometric hold is an exercis...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Abdominals</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>FYR Banded Plank Jack</td>\n",
+       "      <td>The banded plank jack is a variation on the pl...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Abdominals</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Banded crunch</td>\n",
+       "      <td>The banded crunch is an exercise targeting the...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Abdominals</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Crunch</td>\n",
+       "      <td>The crunch is a popular core exercise targetin...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Abdominals</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2913</th>\n",
+       "      <td>2913</td>\n",
+       "      <td>EZ-bar skullcrusher-</td>\n",
+       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Average</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2914</th>\n",
+       "      <td>2914</td>\n",
+       "      <td>Lying Close-Grip Barbell Triceps Press To Chin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Beginner</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Average</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2915</th>\n",
+       "      <td>2915</td>\n",
+       "      <td>EZ-Bar Skullcrusher - Gethin Variation</td>\n",
+       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2916</th>\n",
+       "      <td>2916</td>\n",
+       "      <td>TBS Skullcrusher</td>\n",
+       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2917</th>\n",
+       "      <td>2917</td>\n",
+       "      <td>30 Arms EZ-Bar Skullcrusher</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2918 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                           Title  \\\n",
+       "0              0                          Partner plank band row   \n",
+       "1              1                    Banded crunch isometric hold   \n",
+       "2              2                           FYR Banded Plank Jack   \n",
+       "3              3                                   Banded crunch   \n",
+       "4              4                                          Crunch   \n",
+       "...          ...                                             ...   \n",
+       "2913        2913                            EZ-bar skullcrusher-   \n",
+       "2914        2914  Lying Close-Grip Barbell Triceps Press To Chin   \n",
+       "2915        2915          EZ-Bar Skullcrusher - Gethin Variation   \n",
+       "2916        2916                                TBS Skullcrusher   \n",
+       "2917        2917                     30 Arms EZ-Bar Skullcrusher   \n",
+       "\n",
+       "                                                   Desc      Type    BodyPart  \\\n",
+       "0     The partner plank band row is an abdominal exe...  Strength  Abdominals   \n",
+       "1     The banded crunch isometric hold is an exercis...  Strength  Abdominals   \n",
+       "2     The banded plank jack is a variation on the pl...  Strength  Abdominals   \n",
+       "3     The banded crunch is an exercise targeting the...  Strength  Abdominals   \n",
+       "4     The crunch is a popular core exercise targetin...  Strength  Abdominals   \n",
+       "...                                                 ...       ...         ...   \n",
+       "2913  The EZ-bar skullcrusher is a popular exercise ...  Strength     Triceps   \n",
+       "2914                                                NaN  Strength     Triceps   \n",
+       "2915  The EZ-bar skullcrusher is a popular exercise ...  Strength     Triceps   \n",
+       "2916  The EZ-bar skullcrusher is a popular exercise ...  Strength     Triceps   \n",
+       "2917                                                NaN  Strength     Triceps   \n",
+       "\n",
+       "         Equipment         Level  Rating RatingDesc  \n",
+       "0            Bands  Intermediate     0.0        NaN  \n",
+       "1            Bands  Intermediate     NaN        NaN  \n",
+       "2            Bands  Intermediate     NaN        NaN  \n",
+       "3            Bands  Intermediate     NaN        NaN  \n",
+       "4            Bands  Intermediate     NaN        NaN  \n",
+       "...            ...           ...     ...        ...  \n",
+       "2913  E-Z Curl Bar  Intermediate     8.1    Average  \n",
+       "2914  E-Z Curl Bar      Beginner     8.1    Average  \n",
+       "2915  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "2916  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "2917  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "\n",
+       "[2918 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gym_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
