Added more details to README and edited directory structure

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercise Database filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Loading Libraries and Dataset"
    ]
   },
