Added some TODO's to get back on track following break

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: begin researching filtering methods to dynamically display what exercise should be completed next"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
