--- a/pose.ipynb
+++ b/pose.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Work to understand pose estimation starting with the following site:\n",
+    "# https://www.analyticsvidhya.com/blog/2022/01/a-comprehensive-guide-on-human-pose-estimation/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
