--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "[2918 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3210,26 +3210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Unnamed: 0', 'Title', 'Desc', 'Type', 'BodyPart', 'Equipment', 'Level', 'Rating', 'RatingDesc']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Getting all attributes\n",
-    "attributes = gym_df.columns.tolist()\n",
-    "print(attributes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3252,7 +3233,7 @@
       "['Abdominals', 'Adductors', 'Abductors', 'Biceps', 'Calves', 'Chest', 'Forearms', 'Glutes', 'Hamstrings', 'Lats', 'Lower Back', 'Middle Back', 'Traps', 'Neck', 'Quadriceps', 'Shoulders', 'Triceps']\n",
       "['Bands', 'Barbell', 'Kettlebells', 'Dumbbell', 'Other', 'Cable', 'Machine', 'Body Only', 'Medicine Ball', nan, 'Exercise Ball', 'Foam Roll', 'E-Z Curl Bar']\n",
       "['Intermediate', 'Beginner', 'Expert']\n",
-      "8.9\n"
+      "[0.0, nan, 8.9, 8.5, 8.3, 7.0, 4.7, 7.7, 7.3, 9.3, 8.6, 9.5, 9.2, 9.0, 8.8, 8.4, 8.0, 9.1, 8.2, 8.1, 7.9, 5.0, 8.7, 7.8, 7.5, 7.4, 6.9, 6.5, 3.9, 6.4, 4.0, 2.8, 6.7, 3.8, 2.4, 1.6, 7.1, 3.6, 3.2, 5.8, 7.6, 7.2, 4.8, 3.3, 1.0, 6.0, 5.3, 2.7, 6.3, 5.6, 4.1, 4.9, 4.2, 5.5, 5.9, 3.0, 9.4, 6.2, 9.6, 2.5, 5.2, 6.6, 3.5, 3.1, 4.4, 4.3, 5.4, 4.5, 5.1, 5.7, 6.8, 3.4, 6.1]\n"
      ]
     }
    ],
@@ -3276,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3296,8 +3277,157 @@
     }
    ],
    "source": [
+    "# Getting all attributes\n",
+    "attributes = gym_df.columns.tolist()\n",
+    "\n",
+    "# Print attributes\n",
     "for attribute in attributes:\n",
     "    print(attribute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abdominals\n",
+      "Adductors\n",
+      "Abductors\n",
+      "Biceps\n",
+      "Calves\n",
+      "Chest\n",
+      "Forearms\n",
+      "Glutes\n",
+      "Hamstrings\n",
+      "Lats\n",
+      "Lower Back\n",
+      "Middle Back\n",
+      "Traps\n",
+      "Neck\n",
+      "Quadriceps\n",
+      "Shoulders\n",
+      "Triceps\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Printing All muscle groups\n",
+    "for muscle in muscle_group:\n",
+    "    print(muscle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Band overhead triceps press' 'Band overhead triceps extension'\n",
+      " 'Band straight-arm pull-down' 'Band skullcrusher'\n",
+      " 'Single-arm band kick-back' 'Incline EZ-bar skullcrusher'\n",
+      " 'Decline Close-Grip Bench To Skull Crusher' 'Bench Press - Powerlifting'\n",
+      " 'Behind-the-head skullcrusher'\n",
+      " 'Standing barbell overhead triceps extension' 'Reverse-grip bench press'\n",
+      " 'Bench Press with Chains' 'Floor Press' 'One Arm Floor Press'\n",
+      " 'Pin Presses' 'JM Press With Bands' 'JM Press' 'Floor Press with Chains'\n",
+      " 'Reverse Band Bench Press'\n",
+      " 'Decline Barbell Triceps Extension - Gethin Variation' 'AM Skullcrusher'\n",
+      " '30 Arms Close-Grip Bench Press' '30 Arms Barbell Skullcrusher'\n",
+      " 'FYR2 Sprawl Over Kettlebell' 'Dumbbell floor press'\n",
+      " 'Seated triceps press' 'Tricep Dumbbell Kickback'\n",
+      " 'Standing Dumbbell Triceps Extension' 'Double-arm triceps kick-back'\n",
+      " 'Single-arm dumbbell triceps extension'\n",
+      " 'Decline Dumbbell Triceps Extension' 'Dumbbell skullcrusher'\n",
+      " 'One Arm Pronated Dumbbell Triceps Extension'\n",
+      " 'One Arm Supinated Dumbbell Triceps Extension'\n",
+      " 'Seated Bent-Over Two-Arm Dumbbell Triceps Extension' 'Tate Press'\n",
+      " 'Standing Bent-Over One-Arm Dumbbell Triceps Extension'\n",
+      " 'Seated Bent-Over One-Arm Dumbbell Triceps Extension'\n",
+      " 'Dumbbell Tricep Extension -Pronated Grip'\n",
+      " 'V-sit with overhead triceps extension' 'PJR Pull-Over'\n",
+      " 'Paul Carter Dumbbell Kick-Back' 'Single-arm dumbbell skullcrusher'\n",
+      " 'Dumbbells-together incline bench press'\n",
+      " 'Incline dumbbell overhead triceps extension' 'Dumbbell Crush Press'\n",
+      " 'Holman Hovering Renegade Triceps Press'\n",
+      " 'Holman Heavy Triceps Press to Overhead Press'\n",
+      " 'Total Fitness Close-Grip Dumbbell Press'\n",
+      " 'Dumbbell row to triceps kick-back' 'Rolling triceps press'\n",
+      " 'MetaBurn Skullcrusher to Ab Crunch'\n",
+      " 'FYR2 Single-Dumbbell Triceps Extension'\n",
+      " '30 Arms Overhead Dumbbell Triceps Extension'\n",
+      " '30 Arms Dumbbell Skullcrusher' '30 Arms Dumbbell Kick-Back'\n",
+      " '30 Arms BFR Dumbbell Kick-Back' 'Dumbbell saw triceps skullcrusher'\n",
+      " 'Chain Handle Extension' 'Sled Overhead Triceps Extension'\n",
+      " 'Body Triceps Press Using Flat Bench' 'Suspended Triceps Press'\n",
+      " 'Seated triceps push-down' 'Machine triceps extension-'\n",
+      " 'Holman Overhead Weighted Triceps Press' '30 Arms Weighted Triceps Dip'\n",
+      " 'Cable V-bar push-down' 'Reverse Grip Triceps Pushdown'\n",
+      " 'Kneeling cable triceps extension' 'Single-arm cable triceps extension'\n",
+      " 'Dip Machine' 'Triceps Pushdown' 'Low cable overhead triceps extension'\n",
+      " 'Lying cable triceps extension' 'Low Cable Triceps Extension'\n",
+      " 'Cable overhead triceps extension'\n",
+      " 'Single-arm low cable triceps extension'\n",
+      " 'Incline cable straight-bar triceps extension'\n",
+      " 'Paul Carter Overhead Rope Triceps Extension' 'TBS Rope Cable Push-Down'\n",
+      " 'Single-arm cable triceps kick-back'\n",
+      " 'Incline cable rope triceps extension'\n",
+      " 'Reverse-grip cable straight-bar push-down'\n",
+      " 'Kneeling Cable Triceps Extension - Gethin Variation'\n",
+      " 'Cable Overhead Triceps Extension - Gethin Variation'\n",
+      " 'Reverse-Grip Cable Triceps Pushdown - Gethin Variation'\n",
+      " 'Cable Triceps Extension - Gethin Variation'\n",
+      " 'Single-arm incline triceps extension'\n",
+      " 'Triceps Overhead Extension with Rope - Gethin Variation'\n",
+      " 'Cable rope push-down' 'Cable straight-bar push-down'\n",
+      " 'Straight-arm bar pull-down' 'AM Rope Triceps Pushdown'\n",
+      " 'AM Bar Triceps Push-Down' 'Rope overhead triceps extension'\n",
+      " 'UP Rope Push-down' 'UP Triceps Extension Straight-Bar Push-Down'\n",
+      " 'LD Cable One-Arm Upright Row'\n",
+      " '30 Arms Underhand Cable Straight-Bar Push-Down'\n",
+      " '30 Arms Single-Arm Reverse-Grip Cable Push-Down'\n",
+      " '30 Arms Cable V-Bar Push-Down' '30 Arms Cable Straight-Bar Push-Down'\n",
+      " '30 Arms Cable Rope Push-Down'\n",
+      " '30 Arms Cable Rope Overhead Triceps Extension'\n",
+      " 'BFR underhand straight-bar push-down'\n",
+      " 'BFR overhand straight-bar push-down' 'BFR cable rope push-down'\n",
+      " 'Triceps Pressdown' 'Machine Triceps Extension'\n",
+      " 'Smith machine end-grip shoulder press'\n",
+      " 'Assist machine triceps push-down'\n",
+      " 'Smith machine close-grip bench press-'\n",
+      " 'Machine Triceps Extension - Gethin Variation'\n",
+      " 'Overhead Machine Triceps Extension - Gethin Variation'\n",
+      " '30 Arms Machine Triceps Dip' 'Triceps dip' 'Weighted bench dip'\n",
+      " 'Push-Ups - Close Triceps Position' 'Parallel Bar Dip' 'Ring dip'\n",
+      " 'Feet-elevated bench dip' 'Bodyweight triceps press'\n",
+      " 'Standing Towel Triceps Extension' 'Tricep Side Stretch'\n",
+      " 'Triceps Stretch' 'Overhead Triceps' 'Russian Bar Dip'\n",
+      " 'Straight-arm plank with kick-back' 'TBS Dip'\n",
+      " 'Bench Dips - Gethin Variation' 'Banded dip'\n",
+      " 'Bench Dip - Gethin Variation' 'HM Chair Dip' 'Bench dip'\n",
+      " 'Holman Step Triceps Dip' 'Holman Chair Triceps Dip'\n",
+      " 'Bodyweight Triceps Rope Press' 'Holman Heavy Triceps Overhead Press'\n",
+      " 'Holman Couch Triceps Dip' 'FYR2 Triceps Push-Up' '30 Arms Triceps Dip'\n",
+      " '30 Arms Close-Grip Push-Up' '30 Arms BFR Close-Grip Push-Up'\n",
+      " 'Supine Chest Throw' 'Decline EZ-bar skullcrusher' 'EZ-Bar Skullcrusher'\n",
+      " 'EZ-bar skullcrusher-' 'Lying Close-Grip Barbell Triceps Press To Chin'\n",
+      " 'EZ-Bar Skullcrusher - Gethin Variation' 'TBS Skullcrusher'\n",
+      " '30 Arms EZ-Bar Skullcrusher']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Printing all exercises that target the triceps \n",
+    "\n",
+    "tricep_exercises_df = gym_df[gym_df['BodyPart'] == 'Triceps']\n",
+    "\n",
+    "print(tricep_exercises_df[\"Title\"].unique())\n"
    ]
   }
  ],
