Created specified df for each body part being exercised

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "[2918 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3257,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3287,7 +3287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3322,112 +3322,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Band overhead triceps press' 'Band overhead triceps extension'\n",
-      " 'Band straight-arm pull-down' 'Band skullcrusher'\n",
-      " 'Single-arm band kick-back' 'Incline EZ-bar skullcrusher'\n",
-      " 'Decline Close-Grip Bench To Skull Crusher' 'Bench Press - Powerlifting'\n",
-      " 'Behind-the-head skullcrusher'\n",
-      " 'Standing barbell overhead triceps extension' 'Reverse-grip bench press'\n",
-      " 'Bench Press with Chains' 'Floor Press' 'One Arm Floor Press'\n",
-      " 'Pin Presses' 'JM Press With Bands' 'JM Press' 'Floor Press with Chains'\n",
-      " 'Reverse Band Bench Press'\n",
-      " 'Decline Barbell Triceps Extension - Gethin Variation' 'AM Skullcrusher'\n",
-      " '30 Arms Close-Grip Bench Press' '30 Arms Barbell Skullcrusher'\n",
-      " 'FYR2 Sprawl Over Kettlebell' 'Dumbbell floor press'\n",
-      " 'Seated triceps press' 'Tricep Dumbbell Kickback'\n",
-      " 'Standing Dumbbell Triceps Extension' 'Double-arm triceps kick-back'\n",
-      " 'Single-arm dumbbell triceps extension'\n",
-      " 'Decline Dumbbell Triceps Extension' 'Dumbbell skullcrusher'\n",
-      " 'One Arm Pronated Dumbbell Triceps Extension'\n",
-      " 'One Arm Supinated Dumbbell Triceps Extension'\n",
-      " 'Seated Bent-Over Two-Arm Dumbbell Triceps Extension' 'Tate Press'\n",
-      " 'Standing Bent-Over One-Arm Dumbbell Triceps Extension'\n",
-      " 'Seated Bent-Over One-Arm Dumbbell Triceps Extension'\n",
-      " 'Dumbbell Tricep Extension -Pronated Grip'\n",
-      " 'V-sit with overhead triceps extension' 'PJR Pull-Over'\n",
-      " 'Paul Carter Dumbbell Kick-Back' 'Single-arm dumbbell skullcrusher'\n",
-      " 'Dumbbells-together incline bench press'\n",
-      " 'Incline dumbbell overhead triceps extension' 'Dumbbell Crush Press'\n",
-      " 'Holman Hovering Renegade Triceps Press'\n",
-      " 'Holman Heavy Triceps Press to Overhead Press'\n",
-      " 'Total Fitness Close-Grip Dumbbell Press'\n",
-      " 'Dumbbell row to triceps kick-back' 'Rolling triceps press'\n",
-      " 'MetaBurn Skullcrusher to Ab Crunch'\n",
-      " 'FYR2 Single-Dumbbell Triceps Extension'\n",
-      " '30 Arms Overhead Dumbbell Triceps Extension'\n",
-      " '30 Arms Dumbbell Skullcrusher' '30 Arms Dumbbell Kick-Back'\n",
-      " '30 Arms BFR Dumbbell Kick-Back' 'Dumbbell saw triceps skullcrusher'\n",
-      " 'Chain Handle Extension' 'Sled Overhead Triceps Extension'\n",
-      " 'Body Triceps Press Using Flat Bench' 'Suspended Triceps Press'\n",
-      " 'Seated triceps push-down' 'Machine triceps extension-'\n",
-      " 'Holman Overhead Weighted Triceps Press' '30 Arms Weighted Triceps Dip'\n",
-      " 'Cable V-bar push-down' 'Reverse Grip Triceps Pushdown'\n",
-      " 'Kneeling cable triceps extension' 'Single-arm cable triceps extension'\n",
-      " 'Dip Machine' 'Triceps Pushdown' 'Low cable overhead triceps extension'\n",
-      " 'Lying cable triceps extension' 'Low Cable Triceps Extension'\n",
-      " 'Cable overhead triceps extension'\n",
-      " 'Single-arm low cable triceps extension'\n",
-      " 'Incline cable straight-bar triceps extension'\n",
-      " 'Paul Carter Overhead Rope Triceps Extension' 'TBS Rope Cable Push-Down'\n",
-      " 'Single-arm cable triceps kick-back'\n",
-      " 'Incline cable rope triceps extension'\n",
-      " 'Reverse-grip cable straight-bar push-down'\n",
-      " 'Kneeling Cable Triceps Extension - Gethin Variation'\n",
-      " 'Cable Overhead Triceps Extension - Gethin Variation'\n",
-      " 'Reverse-Grip Cable Triceps Pushdown - Gethin Variation'\n",
-      " 'Cable Triceps Extension - Gethin Variation'\n",
-      " 'Single-arm incline triceps extension'\n",
-      " 'Triceps Overhead Extension with Rope - Gethin Variation'\n",
-      " 'Cable rope push-down' 'Cable straight-bar push-down'\n",
-      " 'Straight-arm bar pull-down' 'AM Rope Triceps Pushdown'\n",
-      " 'AM Bar Triceps Push-Down' 'Rope overhead triceps extension'\n",
-      " 'UP Rope Push-down' 'UP Triceps Extension Straight-Bar Push-Down'\n",
-      " 'LD Cable One-Arm Upright Row'\n",
-      " '30 Arms Underhand Cable Straight-Bar Push-Down'\n",
-      " '30 Arms Single-Arm Reverse-Grip Cable Push-Down'\n",
-      " '30 Arms Cable V-Bar Push-Down' '30 Arms Cable Straight-Bar Push-Down'\n",
-      " '30 Arms Cable Rope Push-Down'\n",
-      " '30 Arms Cable Rope Overhead Triceps Extension'\n",
-      " 'BFR underhand straight-bar push-down'\n",
-      " 'BFR overhand straight-bar push-down' 'BFR cable rope push-down'\n",
-      " 'Triceps Pressdown' 'Machine Triceps Extension'\n",
-      " 'Smith machine end-grip shoulder press'\n",
-      " 'Assist machine triceps push-down'\n",
-      " 'Smith machine close-grip bench press-'\n",
-      " 'Machine Triceps Extension - Gethin Variation'\n",
-      " 'Overhead Machine Triceps Extension - Gethin Variation'\n",
-      " '30 Arms Machine Triceps Dip' 'Triceps dip' 'Weighted bench dip'\n",
-      " 'Push-Ups - Close Triceps Position' 'Parallel Bar Dip' 'Ring dip'\n",
-      " 'Feet-elevated bench dip' 'Bodyweight triceps press'\n",
-      " 'Standing Towel Triceps Extension' 'Tricep Side Stretch'\n",
-      " 'Triceps Stretch' 'Overhead Triceps' 'Russian Bar Dip'\n",
-      " 'Straight-arm plank with kick-back' 'TBS Dip'\n",
-      " 'Bench Dips - Gethin Variation' 'Banded dip'\n",
-      " 'Bench Dip - Gethin Variation' 'HM Chair Dip' 'Bench dip'\n",
-      " 'Holman Step Triceps Dip' 'Holman Chair Triceps Dip'\n",
-      " 'Bodyweight Triceps Rope Press' 'Holman Heavy Triceps Overhead Press'\n",
-      " 'Holman Couch Triceps Dip' 'FYR2 Triceps Push-Up' '30 Arms Triceps Dip'\n",
-      " '30 Arms Close-Grip Push-Up' '30 Arms BFR Close-Grip Push-Up'\n",
-      " 'Supine Chest Throw' 'Decline EZ-bar skullcrusher' 'EZ-Bar Skullcrusher'\n",
-      " 'EZ-bar skullcrusher-' 'Lying Close-Grip Barbell Triceps Press To Chin'\n",
-      " 'EZ-Bar Skullcrusher - Gethin Variation' 'TBS Skullcrusher'\n",
-      " '30 Arms EZ-Bar Skullcrusher']\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Desc</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>BodyPart</th>\n",
+       "      <th>Equipment</th>\n",
+       "      <th>Level</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>RatingDesc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2767</th>\n",
+       "      <td>2767</td>\n",
+       "      <td>Band overhead triceps press</td>\n",
+       "      <td>The band overhead triceps press is a dynamic a...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2768</th>\n",
+       "      <td>2768</td>\n",
+       "      <td>Band overhead triceps extension</td>\n",
+       "      <td>The band overhead triceps extension is a singl...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2769</th>\n",
+       "      <td>2769</td>\n",
+       "      <td>Band straight-arm pull-down</td>\n",
+       "      <td>The band straight-arm pull-down is a non-gym o...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2770</th>\n",
+       "      <td>2770</td>\n",
+       "      <td>Band skullcrusher</td>\n",
+       "      <td>The band skullcrusher is a variation of the po...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2771</th>\n",
+       "      <td>2771</td>\n",
+       "      <td>Single-arm band kick-back</td>\n",
+       "      <td>The single-arm band kick-back is an isolation ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Bands</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2913</th>\n",
+       "      <td>2913</td>\n",
+       "      <td>EZ-bar skullcrusher-</td>\n",
+       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Average</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2914</th>\n",
+       "      <td>2914</td>\n",
+       "      <td>Lying Close-Grip Barbell Triceps Press To Chin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Beginner</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Average</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2915</th>\n",
+       "      <td>2915</td>\n",
+       "      <td>EZ-Bar Skullcrusher - Gethin Variation</td>\n",
+       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2916</th>\n",
+       "      <td>2916</td>\n",
+       "      <td>TBS Skullcrusher</td>\n",
+       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2917</th>\n",
+       "      <td>2917</td>\n",
+       "      <td>30 Arms EZ-Bar Skullcrusher</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>151 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                           Title  \\\n",
+       "2767        2767                     Band overhead triceps press   \n",
+       "2768        2768                 Band overhead triceps extension   \n",
+       "2769        2769                     Band straight-arm pull-down   \n",
+       "2770        2770                               Band skullcrusher   \n",
+       "2771        2771                       Single-arm band kick-back   \n",
+       "...          ...                                             ...   \n",
+       "2913        2913                            EZ-bar skullcrusher-   \n",
+       "2914        2914  Lying Close-Grip Barbell Triceps Press To Chin   \n",
+       "2915        2915          EZ-Bar Skullcrusher - Gethin Variation   \n",
+       "2916        2916                                TBS Skullcrusher   \n",
+       "2917        2917                     30 Arms EZ-Bar Skullcrusher   \n",
+       "\n",
+       "                                                   Desc      Type BodyPart  \\\n",
+       "2767  The band overhead triceps press is a dynamic a...  Strength  Triceps   \n",
+       "2768  The band overhead triceps extension is a singl...  Strength  Triceps   \n",
+       "2769  The band straight-arm pull-down is a non-gym o...  Strength  Triceps   \n",
+       "2770  The band skullcrusher is a variation of the po...  Strength  Triceps   \n",
+       "2771  The single-arm band kick-back is an isolation ...  Strength  Triceps   \n",
+       "...                                                 ...       ...      ...   \n",
+       "2913  The EZ-bar skullcrusher is a popular exercise ...  Strength  Triceps   \n",
+       "2914                                                NaN  Strength  Triceps   \n",
+       "2915  The EZ-bar skullcrusher is a popular exercise ...  Strength  Triceps   \n",
+       "2916  The EZ-bar skullcrusher is a popular exercise ...  Strength  Triceps   \n",
+       "2917                                                NaN  Strength  Triceps   \n",
+       "\n",
+       "         Equipment         Level  Rating RatingDesc  \n",
+       "2767         Bands  Intermediate     0.0        NaN  \n",
+       "2768         Bands  Intermediate     NaN        NaN  \n",
+       "2769         Bands  Intermediate     NaN        NaN  \n",
+       "2770         Bands  Intermediate     NaN        NaN  \n",
+       "2771         Bands  Intermediate     NaN        NaN  \n",
+       "...            ...           ...     ...        ...  \n",
+       "2913  E-Z Curl Bar  Intermediate     8.1    Average  \n",
+       "2914  E-Z Curl Bar      Beginner     8.1    Average  \n",
+       "2915  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "2916  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "2917  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "\n",
+       "[151 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Printing all exercises that target the triceps \n",
-    "\n",
+    "# Creating DF for each specific exercise\n",
+    "abs_exercises_df = gym_df[gym_df['BodyPart'] == 'Abdominals']\n",
+    "add_exercises_df = gym_df[gym_df['BodyPart'] == 'Adductors']\n",
+    "abd_exercises_df = gym_df[gym_df['BodyPart'] == 'Abductors']\n",
+    "bicep_exercises_df = gym_df[gym_df['BodyPart'] == 'Biceps']\n",
+    "calves_exercises_df = gym_df[gym_df['BodyPart'] == 'Calves']\n",
+    "chest_exercises_df = gym_df[gym_df['BodyPart'] == 'Chest']\n",
+    "fa_exercises_df = gym_df[gym_df['BodyPart'] == 'Forearms']\n",
+    "glutes_exercises_df = gym_df[gym_df['BodyPart'] == 'Glutes']\n",
+    "hamstrings_exercises_df = gym_df[gym_df['BodyPart'] == 'Hamstrings']\n",
+    "lats_exercises_df = gym_df[gym_df['BodyPart'] == 'Lats']\n",
+    "lb_exercises_df = gym_df[gym_df['BodyPart'] == 'Lower Back']\n",
+    "mb_exercises_df = gym_df[gym_df['BodyPart'] == 'Middle Back']\n",
+    "traps_exercises_df = gym_df[gym_df['BodyPart'] == 'Traps']\n",
+    "neck_exercises_df = gym_df[gym_df['BodyPart'] == 'Neck']\n",
+    "quads_exercises_df = gym_df[gym_df['BodyPart'] == 'Quadriceps']\n",
+    "shoulders_exercises_df = gym_df[gym_df['BodyPart'] == 'Shoulders']\n",
     "tricep_exercises_df = gym_df[gym_df['BodyPart'] == 'Triceps']\n",
     "\n",
-    "print(tricep_exercises_df[\"Title\"].unique())\n"
+    "# Printing all exercises that target the triceps to see results\n",
+    "tricep_exercises_df\n"
    ]
   }
  ],
